// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Preloader /> should render a preloader with type ~ button 1`] = `
<Preloader
  color="green"
  height={40}
  style="TailSpin"
  type="button"
  width={40}
>
  <div
    className=""
  >
    <Loader
      className="text-center mx-auto center"
      color="green"
      height={40}
      type="TailSpin"
      width={40}
    >
      <div>
        <TailSpin
          className="text-center mx-auto center"
          color="green"
          height={40}
          type="TailSpin"
          width={40}
        >
          <svg
            height={40}
            viewBox="0 0 38 38"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <linearGradient
                id="a"
                x1="8.042%"
                x2="65.682%"
                y1="0%"
                y2="23.865%"
              >
                <stop
                  offset="0%"
                  stopColor="green"
                  stopOpacity="0"
                />
                <stop
                  offset="63.146%"
                  stopColor="green"
                  stopOpacity=".631"
                />
                <stop
                  offset="100%"
                  stopColor="green"
                />
              </linearGradient>
            </defs>
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                transform="translate(1 1)"
              >
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                  id="Oval-2"
                  stroke="green"
                  strokeWidth="2"
                >
                  <animateTransform
                    attributeName="transform"
                    dur="0.9s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
                <circle
                  cx="36"
                  cy="18"
                  fill="#fff"
                  r="1"
                >
                  <animateTransform
                    attributeName="transform"
                    dur="0.9s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </circle>
              </g>
            </g>
          </svg>
        </TailSpin>
      </div>
    </Loader>
  </div>
</Preloader>
`;

exports[`<Preloader /> should render a preloader with type ~ main-page 1`] = `
<Preloader
  color="green"
  height={40}
  style="TailSpin"
  type="main-preloder"
  width={40}
>
  <div
    className=""
  >
    <Loader
      className="text-center mx-auto center"
      color="green"
      height={40}
      type="TailSpin"
      width={40}
    >
      <div>
        <TailSpin
          className="text-center mx-auto center"
          color="green"
          height={40}
          type="TailSpin"
          width={40}
        >
          <svg
            height={40}
            viewBox="0 0 38 38"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <linearGradient
                id="a"
                x1="8.042%"
                x2="65.682%"
                y1="0%"
                y2="23.865%"
              >
                <stop
                  offset="0%"
                  stopColor="green"
                  stopOpacity="0"
                />
                <stop
                  offset="63.146%"
                  stopColor="green"
                  stopOpacity=".631"
                />
                <stop
                  offset="100%"
                  stopColor="green"
                />
              </linearGradient>
            </defs>
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                transform="translate(1 1)"
              >
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                  id="Oval-2"
                  stroke="green"
                  strokeWidth="2"
                >
                  <animateTransform
                    attributeName="transform"
                    dur="0.9s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
                <circle
                  cx="36"
                  cy="18"
                  fill="#fff"
                  r="1"
                >
                  <animateTransform
                    attributeName="transform"
                    dur="0.9s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </circle>
              </g>
            </g>
          </svg>
        </TailSpin>
      </div>
    </Loader>
  </div>
</Preloader>
`;
